--- a/Horoscope App/src/App.scss
+++ b/Horoscope App/src/App.scss
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+@import "./scss/mixins";
+@import "./scss/reset";
+@import  "./scss/variables";
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Almendra+Display&display=swap');
+
+body{
+  font-family: 'Rubik Distressed', cursive;
+  background-image: $backgroundImage;
+  height: 100vh;
+  background-attachment: fixed;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+p{
+  font-family: 'Almendra Display', cursive;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
