--- a/MBA/src/sass/App.scss
+++ b/MBA/src/sass/App.scss
@@ -13,7 +13,7 @@
     padding: 5rem;
     background: pink;
     text-align: center;
-    // transition: transform 2s;
+    transition: transform 2s;
     transform-style: preserve-3d;
 
     .card__front {
@@ -41,5 +41,4 @@
   bottom: 0;
   left: 0;
   right: 0;
-  backface-visibility: hidden;
 }
